@@ -6,6 +6,7 @@ NEXT (TBD)
 - refactor `rio_tiler.io.stac.STACReader` to use MultiBaseReader (#225)
 - add `rio_tiler.task` submodule to share tools for handling rio-tiler's future tasks.
 - fix regex parsing for rio-tiler expression
+- add warnings when assets/indexes is passed with expression option (#233)
 
 Breaking Changes:
 - replace dataclass wiht attr to support more flexible class definition (see #225)
